--- a/Desktop/Final project/webpack-static-template-ru-main/src/scss/style.scss
+++ b/Desktop/Final project/webpack-static-template-ru-main/src/scss/style.scss
@@ -1,17 +1,106 @@
-$bgColor: #24292e;
-$text: #fff;
+@use "content-text-style";
+@import 'colors';
+@import "fonts";
+@import "services-list-style";
+@import "button-watch-style";
+@import "swiper";
 
-@font-face {
-  font-family: 'Comic';
-  src: url('../fonts/comic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
+body{
+    min-width: 320px;
+    height: auto;
+    font-family: "TT Lakes", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-body {
-  padding: 1rem;
-  margin: 0;
-  font-family: Comic, sans-serif;
-  background-color: $bgColor;
-  color: $text;
+
+.navigation {
+    width: 100%;
+    height: 88px;
+    display:flex;
+    align-items: center;
+    background-color: white;
+
+        &__list{
+    width: 100%;
+    height:auto;
+    display: flex;
+    align-items: center;
+    background-color: $nav-color;
+    padding-left: 16px;
+    
+    }
+
+        &__button--icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    }
+
+    &__logo{
+    display: flex;
+    align-items: center;
+    margin-left: 16.73px;
+    }
+    
 }
+  
+li{
+    list-style: none;
+}
+
+.line, .line--add{
+    width: 2px;
+    height: 32px;
+    background-color: $line-color;
+    margin-left: 16.75px;;
+    &--add{
+        display: none;
+    }   
+}
+
+
+
+.right--button{
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+}
+/*display none*/
+.button--add{
+    display: none;
+}
+
+.button__text--add{
+        display: none;
+    }   
+
+/*content*/
+.content-wrapper{
+    width: 100%;
+    height: auto;
+    background-color: $main-color;
+   margin: 0;
+}
+
+ h1.content__title{
+        display: flex;
+        align-items: center;
+        margin: 0;
+        font-weight: 700;
+        font-size: 24px;
+        line-height:40px;
+        letter-spacing: -0.6px;
+        gap:16px;
+
+}
+
+
+.title__line{
+            width: 4px;
+            height: 32px;
+            background-color: $title-border-color
+        }
