--- a/Desktop/Final project/webpack-static-template-ru-main/src/scss/colors.scss
+++ b/Desktop/Final project/webpack-static-template-ru-main/src/scss/colors.scss
@@ -5,3 +5,5 @@ $text-color: #1B1C21;
 $button-color:#7E7E82;
 $border-color:#B8FFEC;
 $title-border-color:#41F6D7;
+$swiper-title-color:#D9FFF5;
+$gradient:linear-gradient(to right,#f8f8f8,#ffffff)
