--- a/Desktop/Final project/webpack-static-template-ru-main/src/scss/style.scss
+++ b/Desktop/Final project/webpack-static-template-ru-main/src/scss/style.scss
@@ -4,7 +4,7 @@
 @import "fonts";
 @import "services-list-style";
 @import "button-watch-style";
-@import "swiper-style";
+@import "swipers-style";
 
 
 body{
