--- a/Desktop/Final project/webpack-static-template-ru-main/src/scss/style.scss
+++ b/Desktop/Final project/webpack-static-template-ru-main/src/scss/style.scss
@@ -5,6 +5,8 @@
 @import "services-list-style";
 @import "button-watch-style";
 @import "swipers-style";
+@import "down-container";
+@import "order-arrow";
 
 
 body{
@@ -114,7 +116,6 @@ li{
         margin-top: 16px;
     }
 }
-
 
 
 
